testsuite/tests/th/T16980a.stderr

T16980a.hs:10:5: error: [GHC-83865]
    • Couldn't match expected type ‘Int’ with actual type ‘Integer’
    • In the expression: x
      In an equation for ‘y’: y = x
